<resources>
    <string name="app_name">UAS_DPM_KARYAWANTC_ONEPICK</string>
    <string name="txt_username">Username</string>
    <string name="txt_hint_username">input your username here</string>
    <string name="txt_hint_password">input you password here</string>
    <string name="txt_register">Don\'t have an account? Register</string>
    <string name="txt_pick">PICK THE DESIGN</string>
    <string name="txt_like">YOU LIKE</string>
    <string name="txt_login">Login</string>
    <string name="txt_start">START NOW</string>
    <string name="txt_pick_your_design">Pick your design!</string>
    <string name="txt_pick2">Pick your best design with our professional architect</string>
    <string name="txt_avorite">Favorite</string>
    <string name="txt_pickone">PickOne</string>
</resources>