<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/img_logo"/>

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:text="@string/txt_username"
        android:textColor="#874D2D"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_username"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/label_username"
        android:drawableLeft="@drawable/IC_Username"
        android:hint="@string/txt_hint_username"
        android:inputType="text"
        android:paddingLeft="10dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:text="Password"
        android:textStyle="bold"
        android:textColor="#874D2D"
        android:textSize="17sp"
        android:id="@+id/txt_password"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/label_password"
        android:drawableLeft="@drawable/IC_Pass"
        android:hint="@string/txt_hint_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/Button_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="74dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/Button_Login"
        android:text="@string/txt_login"
        android:textColor="#874D2D" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button_Login"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/txt_register"
        android:textColor="#F4F4F1"
        android:textSize="17sp" />

</RelativeLayout>
